# NeuralAmpModelerPlugin

./: .clang-format  .gitignore  .gitmodules  BUILD.md  CONTRIBUTING.md  CRASH_FIX_SUMMARY.md  INSTALL.md  LICENSE  NeuralAmpModeler.code-workspace  PULL_REQUEST_SUMMARY.md  README.md  bump_version.py  clear_mac_cache.sh  common-ios.xcconfig  common-mac.xcconfig  common-web.mk  common-win.props  duplicate.py  format.bash  format.sh  setup_container.sh  verify_build.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
NeuralAmpModeler/: .editorconfig  Colors.h  NeuralAmpModeler.RPP  NeuralAmpModeler.code-workspace  NeuralAmpModeler.cpp  NeuralAmpModeler.h  NeuralAmpModeler.sln  NeuralAmpModelerControls.h  NeuralAmpModelerFileManager.h  NeuralAmpModelerPreset.cpp  NeuralAmpModelerPreset.h  NeuralAmpModelerStyles.h  NeuralAmpModelerUI.cpp  NeuralAmpModeler_legacy073.RPP  README.md  ToneStack.cpp  ToneStack.h  Unserialization.cpp  architecture.hpp  choc_DisableAllWarnings.h  choc_ReenableAllWarnings.h  config.h
NeuralAmpModeler/UnitTests/: CMakeLists.txt  CreateProject-mac.sh  CreateProject-win.cmd  HowTo.txt  TestMain.cpp  TestNeuralAmpModelerPreset.cpp
NeuralAmpModeler/UnitTests/TestData/: clean.nam  clean.nps
REAPER/: model.nam
TemplateProject/: README.md  TemplateProject.RPP  TemplateProject.cpp  TemplateProject.h  TemplateProject.sln  config.h
docs/: CONTRIBUTING.md  DOWNLOAD.md  LICENSE.md  MODELS.md  QUICK_START.md  README.md  TRAIN.md  _sidebar.md  index.html
folderBrowser/: folderBrowser.cpp  folderBrowser.h
(+201 files in other folders)
